mdapipkg/unpackaged/objects/Portal_Menu__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Menu</label>
        <referenceTo>Portal_Menu__c</referenceTo>
        <relationshipLabel>Portal Menu&apos;s</relationshipLabel>
        <relationshipName>Portal_Menu_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Page</label>
        <referenceTo>Portal_Page__c</referenceTo>
        <relationshipLabel>Portal Menu&apos;s</relationshipLabel>
        <relationshipName>Portal_Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Style_Class__c</fullName>
        <label>Style Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>col-md-4</fullName>
                </value>
                <value>
                    <fullName>col-xs-4 col-md-4 col-lg-4</fullName>
                </value>
                <value>
                    <fullName>col-xs-6 col-md-6 col-lg-6</fullName>
                </value>
                <value>
                    <fullName>col-xs-8 col-md-8 col-lg-8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Portal Menu</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portal Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Menu&apos;s</pluralLabel>
    <recordTypes>
        <fullName>Chatter</fullName>
        <active>true</active>
        <label>Chatter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mega_Menu</fullName>
        <active>true</active>
        <label>Mega Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Item</fullName>
        <active>true</active>
        <label>Menu Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal_Menu</fullName>
        <active>true</active>
        <label>Portal Menu</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>